cmake_minimum_required(VERSION 3.3)
project(micropython)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES 3ds/main.c 3ds/netload.c)
#    3ds/build/genhdr/
#    3ds/modules/citrus/apt.c
#    3ds/modules/citrus/console.c
#    3ds/modules/citrus/gfx.c
#    3ds/modules/citrus/gsp.c
#    3ds/modules/citrus/helpers.h
#    3ds/modules/citrus/hid.c
#    3ds/modules/citrus.c
#    3ds/file_lexer.c
#    3ds/mpconfigport.h
#    3ds/mphalport.h
#    3ds/qstrdefsport.h
#    3ds/stubs.c
#    3ds/test.py
#    py/argcheck.c
#    py/asmarm.c
#    py/asmarm.h
#    py/asmthumb.c
#    py/asmthumb.h
#    py/asmx64.c
#    py/asmx64.h
#    py/asmx86.c
#    py/asmx86.h
#    py/bc.c
#    py/bc.h
#    py/bc0.h
#    py/binary.c
#    py/binary.h
#    py/builtin.h
#    py/builtinevex.c
#    py/builtinimport.c
#    py/compile.c
#    py/compile.h
#    py/emit.h
#    py/emitbc.c
#    py/emitcommon.c
#    py/emitglue.c
#    py/emitglue.h
#    py/emitinlinethumb.c
#    py/emitnative.c
#    py/formatfloat.c
#    py/formatfloat.h
#    py/frozenmod.c
#    py/frozenmod.h
#    py/gc.c
#    py/gc.h
#    py/grammar.h
#    py/lexer.c
#    py/lexer.h
#    py/lexerstr.c
#    py/lexerunix.c
#    py/makeqstrdata.py
#    py/makeversionhdr.py
#    py/malloc.c
#    py/map.c
#    py/misc.h
#    py/mkenv.mk
#    py/mkrules.mk
#    py/modarray.c
#    py/modbuiltins.c
#    py/modcmath.c
#    py/modcollections.c
#    py/modgc.c
#    py/modio.c
#    py/modmath.c
#    py/modmicropython.c
#    py/modstruct.c
#    py/modsys.c
#    py/mpconfig.h
#    py/mphal.h
#    py/mpprint.c
#    py/mpprint.h
#    py/mpstate.c
#    py/mpstate.h
#    py/mpz.c
#    py/mpz.h
#    py/nativeglue.c
#    py/nlr.h
#    py/nlrsetjmp.c
#    py/nlrthumb.S
#    py/nlrx64.S
#    py/nlrx86.S
#    py/nlrxtensa.S
#    py/obj.c
#    py/obj.h
#    py/objarray.c
#    py/objattrtuple.c
#    py/objbool.c
#    py/objboundmeth.c
#    py/objcell.c
#    py/objclosure.c
#    py/objcomplex.c
#    py/objdict.c
#    py/objenumerate.c
#    py/objexcept.c
#    py/objexcept.h
#    py/objfilter.c
#    py/objfloat.c
#    py/objfun.c
#    py/objfun.h
#    py/objgenerator.c
#    py/objgenerator.h
#    py/objgetitemiter.c
#    py/objint.c
#    py/objint.h
#    py/objint_longlong.c
#    py/objint_mpz.c
#    py/objlist.c
#    py/objlist.h
#    py/objmap.c
#    py/objmodule.c
#    py/objmodule.h
#    py/objnamedtuple.c
#    py/objnone.c
#    py/objobject.c
#    py/objpolyiter.c
#    py/objproperty.c
#    py/objrange.c
#    py/objreversed.c
#    py/objset.c
#    py/objsingleton.c
#    py/objslice.c
#    py/objstr.c
#    py/objstr.h
#    py/objstringio.c
#    py/objstrunicode.c
#    py/objtuple.c
#    py/objtuple.h
#    py/objtype.c
#    py/objtype.h
#    py/objzip.c
#    py/opmethods.c
#    py/parse.c
#    py/parse.h
#    py/parsenum.c
#    py/parsenum.h
#    py/parsenumbase.c
#    py/parsenumbase.h
#    py/py.mk
#    py/qstr.c
#    py/qstr.h
#    py/qstrdefs.h
#    py/repl.c
#    py/repl.h
#    py/runtime.c
#    py/runtime.h
#    py/runtime0.h
#    py/scope.c
#    py/scope.h
#    py/sequence.c
#    py/showbc.c
#    py/smallint.c
#    py/smallint.h
#    py/stackctrl.c
#    py/stackctrl.h
#    py/stream.c
#    py/stream.h
#    py/unicode.c
#    py/unicode.h
#    py/vm.c
#    py/vmentrytable.h
#    py/vstr.c
#    py/warning.c

include_directories(/opt/devkitpro/libctru/include)
include_directories(.)

set(MOD_PY_ARRAY)

add_executable(micropython ${SOURCE_FILES})